--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WriteScore"
         tools:targetApi="31">
+        <service
+            android:name=".api.apiService1"
+            android:exported="false"></service>
+        <service
+            android:name=".api.apiService1"
+            android:enabled="true"
+            android:exported="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
